доработано взаимодействие через вьюмодель

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     //навигация
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
+
+    //koin
+    implementation "io.insert-koin:koin-android:3.5.0"
+
 }
