--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,4 +11,5 @@ java {
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:5.1.0"
 }
